# Paint

./: CMakeLists.txt
include/: BrushWidthSpinBox.h  CanvasWidget.h  MainWindow.h  PropertiesDialog.h
include/shapes/: EllipseShape.h  FreehandShape.h  LineShape.h  PolygonShape.h  RectangleShape.h  RegularPolygonShape.h  Shape.h
resources/: resources.qrc
src/: BrushWidthSpinBox.cpp  CanvasWidget.cpp  MainWindow.cpp  PropertiesDialog.cpp  main.cpp
src/shapes/: EllipseShape.cpp  FreehandShape.cpp  LineShape.cpp  PolygonShape.cpp  RectangleShape.cpp  RegularPolygonShape.cpp  Shape.cpp
